# Alpha

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py
backend/app/analytics/: __init__.py
backend/app/api/: __init__.py  main.py
backend/app/backtest/: __init__.py
backend/app/core/: __init__.py
backend/app/core/config/: __init__.py  settings.py
backend/app/core/logging/: __init__.py  setup.py
backend/app/domain/: __init__.py
backend/app/features/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/database/: __init__.py  duckdb_database.py
backend/app/ingestion/: __init__.py  contracts.py
backend/app/scanner/: __init__.py
backend/app/strategies/: __init__.py
backend/tests/unit/api/: test_health.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/infrastructure/database/: test_duckdb_database.py
backend/tests/unit/infrastructure/logging/: test_setup.py
docs/: developer-setup.md
