[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-alpha"
version = "0.1.0"
description = "Foundation for quantitative research in the Indian stock market."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Project Alpha Team" }]
dependencies = [
    "duckdb>=1.1,<2",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.6,<3",
    "python-dotenv>=1.0,<2",
    "structlog>=24.4,<26",
    "uvicorn[standard]>=0.32,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.13,<2",
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
packages = ["app"]
warn_unreachable = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["duckdb", "structlog"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers --cov=app --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
fail_under = 90
show_missing = true
omit = [
    "*/__init__.py",
    "*/application/ports/*",
    "*/data_ingestion/*",
    "*/ingestion/contracts.py",
]
